2016-12-29  Luiz Angelo Daros de Luca  <luizluca@gmail.com>

	* crc32_file.c: Include system.h.
	* system.h: Remove semi-colon after TEMP_FAILURE_RETRY definition.

2016-12-24  Mark Wielaard  <mark@klomp.org>

	* version.c: New source file.
	* Makefile.am (libeu_a_SOURCES): Add version.c
	* system.h (print_version): New function definition.

2016-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>

	* fixedsizehash.h (CONCAT): Use __CONCAT when available.
	* system.h: Include config.h and errno.h.
	(powerof2): Define if not already defined.
	(TEMP_FAILURE_RETRY): Define when not yet defined.

2015-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>

	* Makefile.am (noinst_HEADERS): Add libeu.h.
	* color.c: Remove system.h include, add libeu.h include.
	* crc32_file.c: Likewise.
	* fixedsizehash.h: Remove sys/param.h include.
	* libeu.h: New file.
	* system.h: Include sys/param.h.
	(xmalloc, xcalloc, xrealloc, xstrdup, xstrndup, crc32, crc32_file,
	color_argp, color_enum, color_*): Move definitions to libeu.h.
	* xstrdup.c: Remove system.h include, add libeu.h include.
	* xstrndup.c: Remove system.h include, add libeu.h and stdint.h
	includes.

2015-09-24  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* Makefile.am (AM_CFLAGS): Use -fPIC instead of -fpic to avoid relocation
	overflows in some platforms.

2015-09-22  Mark Wielaard  <mjw@redhat.com>

	* dynamicsizehash.c: Remove old-style function definitions.
	* md5.c: Likewise.
	* sha1.c: Likewise.
	* xmalloc.c: Likewise.
	* xstrdup.c: Likewise.
	* xstrndup.c: Likewise.

2015-05-31  Mark Wielaard  <mjw@redhat.com>

	* eu-config.h (ALLOW_UNALIGNED): Define when ! CHECK_UNDEFINED.

2015-04-23  Max Filippov  <jcmvbkbc@gmail.com>

	* eu-config.h: Use SYMBOL_VERSIONING as guard.

2014-01-17  Lei Zhang  <thestig@google.com>

	* crc32_file.c: Include config.h.

2013-12-12  Josh Stone  <jistone@redhat.com>

	* dynamicsizehash.c (lookup): Add a shortcut around division.
