@@ -38,7 +38,7 @@
 #include <string.h>
 #include <unistd.h>
 #include "libeu.h"
-
+#include "color.h"
 
 /* Prototype for option handler.  */
 static error_t parse_opt (int key, char *arg, struct argp_state *state);
