@@ -44,6 +44,7 @@
 
 #include <libeu.h>
 #include <system.h>
+#include <color.h>
 #include "../libebl/libeblP.h"
 #include "../libdwfl/libdwflP.h"
 
