@@ -1,3 +1,10 @@
+2017-02-14  Ulf Hermann  <ulf.hermann@qt.io>
+
+	* color.h: New file.
+	* color.c: Include color.h.
+	* libeu.h: Remove color handling.
+	* Makefile.am (noinst_HEADERS): Add color.h.
+
 2016-12-29  Luiz Angelo Daros de Luca  <luizluca@gmail.com>
 
 	* crc32_file.c: Include system.h.
